can-socket/tests/compile-fail/id_negative2.rs
fn main() {
	let _id = can_socket::can_id!(standard: -2);
}
